@@ -2,8 +2,9 @@ package org.sopt.app.application.stamp;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
+import javax.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.val;
 import org.sopt.app.common.event.Events;
@@ -26,19 +27,22 @@ public class StampService {
     @Transactional(readOnly = true)
     public StampInfo.Stamp findStamp(Long missionId, Long userId) {
         val entity = stampRepository.findByUserIdAndMissionId(userId, missionId)
-            .orElseThrow(() -> new BadRequestException(ErrorCode.STAMP_NOT_FOUND.getMessage()));
+                .orElseThrow(() -> new BadRequestException(ErrorCode.STAMP_NOT_FOUND.getMessage()));
+        validateStampInfo(entity);
         return StampInfo.Stamp.builder()
-            .id(entity.getId())
-            .contents(entity.getContents())
-            .images(entity.getImages())
-            .createdAt(entity.getCreatedAt())
-            .updatedAt(entity.getUpdatedAt())
-            .build();
+                .id(entity.getId())
+                .contents(entity.getContents())
+                .images(entity.getImages())
+                .activityDate(entity.getActivityDate())
+                .createdAt(entity.getCreatedAt())
+                .updatedAt(entity.getUpdatedAt())
+                .missionId(entity.getMissionId())
+                .build();
     }
 
     @Transactional
     public StampInfo.Stamp uploadStampDeprecated(
-            RegisterStampRequest stampRequest,
+            @Valid RegisterStampRequest stampRequest,
             List<String> imgPaths,
             Long userId,
             Long missionId) {
@@ -49,20 +53,22 @@ public class StampService {
                 .id(newStamp.getId())
                 .contents(newStamp.getContents())
                 .images(newStamp.getImages())
+                .activityDate(newStamp.getActivityDate())
                 .createdAt(newStamp.getCreatedAt())
                 .updatedAt(newStamp.getUpdatedAt())
+                .missionId(newStamp.getMissionId())
                 .build();
     }
 
     @Transactional
     public StampInfo.Stamp uploadStamp(
-            RegisterStampRequest stampRequest,
+            @Valid RegisterStampRequest stampRequest,
             Long userId) {
         val stamp = Stamp.builder()
                 .contents(stampRequest.getContents())
-                .createdAt(LocalDateTime.now())
                 .images(List.of(stampRequest.getImage()))
                 .missionId(stampRequest.getMissionId())
+                .activityDate(stampRequest.getActivityDate())
                 .userId(userId)
                 .build();
 
@@ -71,14 +77,16 @@ public class StampService {
                 .id(newStamp.getId())
                 .contents(newStamp.getContents())
                 .images(newStamp.getImages())
+                .activityDate(newStamp.getActivityDate())
                 .createdAt(newStamp.getCreatedAt())
                 .updatedAt(newStamp.getUpdatedAt())
+                .missionId(newStamp.getMissionId())
                 .build();
     }
 
     @Transactional
     public StampInfo.Stamp editStampContentsDeprecated(
-            StampRequest.EditStampRequest editStampRequest,
+            @Valid StampRequest.EditStampRequest editStampRequest,
             Long userId,
             Long missionId) {
 
@@ -92,16 +100,12 @@ public class StampService {
         val newStamp = stampRepository.save(stamp);
         return StampInfo.Stamp.builder()
                 .id(newStamp.getId())
-                .contents(newStamp.getContents())
-                .images(newStamp.getImages())
-                .createdAt(newStamp.getCreatedAt())
-                .updatedAt(newStamp.getUpdatedAt())
                 .build();
     }
 
     @Transactional
     public StampInfo.Stamp editStampContents(
-            StampRequest.EditStampRequest editStampRequest,
+            @Valid StampRequest.EditStampRequest editStampRequest,
             Long userId) {
 
         val stamp = stampRepository.findByUserIdAndMissionId(userId, editStampRequest.getMissionId())
@@ -112,30 +116,23 @@ public class StampService {
         if (StringUtils.hasText(editStampRequest.getImage())) {
             stamp.changeImages(List.of(editStampRequest.getImage()));
         }
+        if (editStampRequest.getActivityDate() == null) {
+            throw new BadRequestException(ErrorCode.INVALID_STAMP_ACTIVITY_DATE.getMessage());
+        }
+        stamp.changeActivityDate(editStampRequest.getActivityDate());
         stamp.setUpdatedAt(LocalDateTime.now());
         val newStamp = stampRepository.save(stamp);
         return StampInfo.Stamp.builder()
                 .id(newStamp.getId())
-                .contents(newStamp.getContents())
-                .images(newStamp.getImages())
-                .createdAt(newStamp.getCreatedAt())
-                .updatedAt(newStamp.getUpdatedAt())
                 .build();
     }
 
     @Transactional
-    public StampInfo.Stamp editStampImagesDeprecated(StampInfo.Stamp stamp, List<String> imgPaths) {
+    public void editStampImagesDeprecated(StampInfo.Stamp stamp, List<String> imgPaths) {
         val oldStamp = stampRepository.findById(stamp.getId())
                 .orElseThrow(() -> new BadRequestException(ErrorCode.STAMP_NOT_FOUND.getMessage()));
         oldStamp.changeImages(imgPaths);
-        val newStamp = stampRepository.save(oldStamp);
-        return StampInfo.Stamp.builder()
-                .id(newStamp.getId())
-                .contents(newStamp.getContents())
-                .images(newStamp.getImages())
-                .createdAt(newStamp.getCreatedAt())
-                .updatedAt(newStamp.getUpdatedAt())
-                .build();
+        stampRepository.save(oldStamp);
     }
 
     @Transactional(readOnly = true)
@@ -160,19 +157,35 @@ public class StampService {
         stampRepository.deleteAllByUserId(userId);
 
         val imageUrls = stampRepository.findAllByUserId(userId).stream().map(Stamp::getImages)
-                .flatMap(images -> images.stream()).collect(Collectors.toList());
+                .flatMap(Collection::stream).toList();
         Events.raise(new StampDeletedEvent(imageUrls));
     }
 
+    private void validateStampInfo(Stamp entity) {
+        if (entity.getId() == null) {
+            throw new BadRequestException(ErrorCode.INVALID_STAMP_ID.getMessage());
+        }
+        if (!StringUtils.hasText(entity.getContents())) {
+            throw new BadRequestException(ErrorCode.INVALID_STAMP_CONTENTS.getMessage());
+        }
+        if (entity.getImages().isEmpty()) {
+            throw new BadRequestException(ErrorCode.INVALID_STAMP_IMAGES.getMessage());
+        }
+        if (entity.getActivityDate() == null) {
+            throw new BadRequestException(ErrorCode.INVALID_STAMP_ACTIVITY_DATE.getMessage());
+        }
+        if (entity.getMissionId() == null) {
+            throw new BadRequestException(ErrorCode.INVALID_STAMP_MISSION_ID.getMessage());
+        }
+    }
 
     private Stamp convertStampImgDeprecated(
-            RegisterStampRequest stampRequest,
+            @Valid RegisterStampRequest stampRequest,
             List<String> imgList,
             Long userId,
             Long missionId) {
         return Stamp.builder()
                 .contents(stampRequest.getContents())
-                .createdAt(LocalDateTime.now())
                 .images(imgList)
                 .missionId(missionId)
                 .userId(userId)
